# Vectora

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  AGENTS_CONSOLIDATED_REPORT.md  AGENTS_STATUS_DASHBOARD.txt  API_ARCHITECTURE.md  ARCHITECTURE.txt  BACKEND_IMPLEMENTATION.md  BUILD_RULES.md  BussinesRules.md  BussinesRules.pt.md  CI_CD_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  CLAUDE_CODE_INTEGRATION.md  CONTRIBUTING.md  CONTRIBUTING.pt.md  CUsersMachiDesktopvectoraty_errors.txt  DAYS_2-7_PLAN.md  DAY_1_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  DIRECTORY_STRUCTURE.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_MAP.md  DREAM_ADDITIONS.md  DREAM_ADDITIONS.pt.md  Dockerfile  EMBEDDING_TOOLS_PLAN.md  EXPECTED_LOG_OUTPUT.md  FINAL_AGENTS_REPORT.txt  FINAL_IMPLEMENTATION_REPORT.md  FINAL_IMPLEMENTATION_REPORT.txt  FIXES_COMPLETED.md  IMPLEMENTATION_CHECKLIST.txt  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.txt  IMPLEMENTATION_PLAN.md  (+116 more)
.claude/: claude_desktop_config.json  launch.json  settings.local.json
.github/: DEPLOYMENT.md  dependabot.yml
.github/workflows/: build.yml  build_linux.yml  build_macos.yml  build_releases.yml  build_windows.yml  ci.yml  extension-claude-code.yml  extension-geminicli.yml  extension-vscode.yml  performance.yml  release.yml  runner.yml  security.yml  test.yml  tests.yml
account/: plan.md
assets/: icon.go  translations.csv
bridge/: README.md
cmd/: README.md
cmd/acp/: main.go
cmd/agent/: main.go
cmd/cli/: main.go
cmd/core/: chat.go  config.go  main.go  workspace.go
cmd/daemon/: elevate_unix.go  elevate_windows.go  main.go  update.go
cmd/desktop/: main.go
cmd/llama/: embed_linux.go  embed_macos.go  embed_windows.go  main.go
cmd/lpm/: main.go
cmd/mpm/: commands.go  main.go  mpm.go
cmd/setup/: cli.go  embed_other.go  embed_windows.go  ipc_integration.go  main.go
cmd/tests/: main.go
cmd/tray/: main.go
cmd/tui/: main.go
cmd/vectora/: app.go  cli.go  flags.go  main.go  rsrc_windows_386.syso  rsrc_windows_amd64.syso
cmd/vectora-app/: app.go  main.go  wails.json
cmd/vectora-cli/: main.go
cmd/vectora-daemon/: main.go
cmd/vectora-installer/: cli.go  embed.go  embed_other.go  embed_windows.go  main.go  theme.go
cmd/vectora-uninstaller/: main.go
cmd/vectora-web/: app.go
core/api/: router.go  startup.go
core/config/: manager.go  secrets.go  types.go  workspace_manager.go
core/db/: embed_fallback.go  interfaces.go  memory_service.go  store.go  vector.go
core/engine/: embedder.go  embedder_test.go  engine.go  turboquant.go
core/git/: manager.go
core/i18n/: i18n_test.go  translations.csv
core/infra/: config.go  logger.go  preferences.go  sanitizer.go
core/ingestion/: dependency_graph.go  indexer.go  parser.go
core/instructions/: instructions.md  tool_examples.json
core/ipc/: client.go  protocol.go  router.go
core/llm/: claude_provider.go  gateway.go  gateway_models.go  gateway_models_test.go  gemini_models.go  gemini_provider.go  messages.go  models.go  openai_provider.go  prompt_factory.go  protocol_llama.go  provider.go  provider_parsing_test.go  qwen_provider.go  router.go  router_test.go  setup.go  voyage_provider.go
core/manager/: resource_pool.go  tenant.go  tenant_security.go
demo/: version.txt
desktop/: app.go  download_manager.go  index_client.go  ipc.go  preferences.go
docs/: 011-checkpointers.md  012-checkpointers-part2.md  013-community-tools.md  API.md  ARCHITECTURE_ANALYSIS.md  BLUEPRINT_VS_REALITY.pt.md  CONTEXT.md  Config_Manager.md  DOCKER.md  EXTENSIONS_PLAN.pt.md  IMPLEMENTATION_SUMMARY.md  Ingestion.md  LLM_Gateway.md  LLM_PROVIDERS.md  MCP_ARCHITECTURE.md  MCP_INTEGRATION.md  MCP_SUBAGENT.md  MVP_REMOVALS.pt.md  MVP_SCOPE.md  Observabilidade.md  PHASE_5_STATUS.md  POLICIES.md  POS_MVP.md  PROMPTS.md  README.md  SECURITY_AUDIT.md  Storage.md  TESTING.md  Tools_Executors.md  agentic_tools.md  golang-timeline.md  implementation_plan.md  rust-timeline.md  vagas.md  walkthrough_vscode.md
engines/: catalog.json  detector.go  downloader.go  integrity.go  manager.go  manager_test.go  process.go  types.go
models/: README.md  catalog.go  catalog.json  detector.go  manager.go  manager_test.go  search.go  types.go
scripts/: coverage_audit.sh
services/: Makefile  go.mod  go.sum  schema.sql
src/: INTERFACES_ARCHITECTURE.md  README.md  __init__.py  background_worker.py  chat.py  checkpointer.py  compose.yml  config.py  constants.py  context.py  debug_dump.py  defaults.env  embedding_queue.py  env.py  graph.py  langgraph.json  langsmith.py  langsmith_integration.py  log_setup.py  main.py  mcp_server.py  memory_store.py  nodes.py  prompts.py  run_chat.py  run_main.py  setup_wizard.py  setup_wizard_tui.py  state.py  tool_config.py  tool_safety.py  tools.py  utils.py
test/: errors.go  helpers.go
tests/: __init__.py  conftest.py  test_agents_coder.py  test_agents_direct.py  test_agents_identity.py  test_agents_search.py  test_agents_supervisor.py  test_community_tools.py  test_config_settings.py  test_context.py  test_graph.py  test_graph_flow.py  test_graph_flow.py.bak  test_ignore_validator.py  test_mcp_integration.py  test_mcp_integration.py.bak  test_mcp_server.py  test_multiply_tool.py  test_nodes_base.py  test_nodes_engine.py  test_nodes_rag_subgraph.py  test_nodes_retrieval.py  test_nodes_tools.py  test_qa_scenarios.py  test_qa_scenarios.py.bak  test_rag_tools.py  test_rag_tools.py.bak  test_services_memory.py  test_services_queue.py  test_services_security.py  test_services_text.py  test_services_tracer.py  test_state.py  test_tools_rag.py  test_version.py
tui/: update.go  view.go
utility/: model_syncer.py  packager.py
vectora/: agent.py  background_worker.py  chat.py  checkpointer.py  commands.py  config.py  debug_dump.py  defaults.env  env.py  graph.py  ignore_validator.py  initialization.py  log_setup.py  main.py  mcp_server.py  memory_store.py  nodes.py  nodes_debug.py  prompts.py  run_chat.py  security.py  settings.py  setup_wizard.py  state.py  tool_safety.py  tools.py  ui.py  utils.py  version.py
web/: plan.md
(+947 files in other folders)
