[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vectora"
version = "0.1.0"
description = "Vectora - Advanced AI Assistant with RAG and MCP capabilities"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Bruno Soares", email = "bruno.soarxz@gmail.com"}]
requires-python = ">=3.13"

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # LangChain / LangGraph (Core)
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain-voyageai>=0.1.0",
    "langchain-ollama>=0.2.0",
    # Storage & Persistence (MVP Local-First)
    "aiosqlite>=0.20.0",
    "lancedb>=0.14.0",
    "pyarrow>=17.0.0",
    "sqlalchemy>=2.0.0",
    # UI & CLI
    "rich>=13.0.0",
    "textual>=0.70.0",
    "rank-bm25>=0.2.2",
    "python-dotenv>=1.0.0",
    # MCP Integration
    "mcp>=0.1.0",
    "langchain-mcp-adapters>=0.1.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.23.0", "pytest-cov>=4.0.0"]
dev = ["ruff>=0.5.0", "mypy>=1.10.0", "ty>=0.0.35"]

[project.scripts]
vectora = "run_chat:run_chat"
vectora-cli = "run_main:main"
vectora-mcp = "mcp_server:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true
show-fixes = true
indent-width = 4
exclude = [".venv"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "T201",   # Checks for print statements
    "COM812", # Checks for the absence of trailing commas
    "INP001", # Checks for packages that are missing an __init__.py file
    "D",      # All pydocstyle (D)
    "ANN401", # Checks that function arguments are annotated with a more specific type than Any
    "ERA001", # Checks for commented-out Python code
    "ANN101", # Missing type annotation for self (covered by Self typing where needed)
    "PLW0603", # Using the global statement to update (acceptable in tool registry patterns)
    "RUF012", # Mutable class attributes (valid for fixture caches)
    "G202",   # Logging statement has formatting issues (acceptable for debug logging)
    "TRY300", # Move statement to else block (stylistic, not functional issue)
    "TRY301", # Abstract raise to inner function (overly restrictive for exception handling)
    "SIM117", # Use single with statement (acceptable with nested contexts)
    "SIM102", # Use single if statement (sometimes multiple ifs are clearer)
    "ARG001", # Unused function argument (e.g., runtime parameter from framework)
    "ARG002", # Unused method argument (e.g., in mocks and fixtures)
    "BLE001", # Blind exception catch (acceptable in library code for robustness)
    "RUF001", # Ambiguous string characters (acceptable for special characters in UI)
    "PGH003", # Specific rule codes for type ignores (acceptable for SQLAlchemy)
    "SLF001", # Private member access (acceptable in tests)
    "PT004",  # Fixture should return (not needed for setup fixtures)
    "S110",   # Try-except-pass (acceptable for optional dependencies)
    "PLR2004", # Magic value (acceptable for configuration constants)
    "E501",   # Line too long (acceptable where breaking would reduce readability)
    "PD011",  # Use .to_numpy() (pandas not primary dependency)
    "DTZ005", # datetime without tz (UTC implicit in application context)
    "TRY004", # Prefer TypeError (ValueError acceptable for validation)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "ANN101", "ANN001", "ARG001", "ARG002", "S101"]
"src/prompts.py" = ["E501"]
"src/tools.py" = ["PLR0911", "S602"]
"src/nodes.py" = ["E501"]
"src/setup_wizard.py" = ["S603", "RUF006", "F841"]
"src/checkpointer.py" = ["N802"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = [
    "chat",
    "checkpointer",
    "config",
    "constants",
    "context",
    "env",
    "embedding_queue",
    "graph",
    "log_setup",
    "nodes",
    "prompts",
    "setup_wizard",
    "state",
    "testing",
    "tool_config",
    "tool_safety",
    "tools",
    "utils",
]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.14"
include = ["src", "tests"]
exclude = [
    "**/venv",
    "**/.venv",
    "**/env",
    "**/.env",
    "**/node_modules",
    "**/__pycache__",
]
venv = ".venv"
venvPath = "."
executionEnvironments = [{ root = "src" }]


[tool.pytest.ini_options]
addopts = "-s --color=yes --tb=short"
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
