[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vectora"
version = "0.1.0"
description = "Vectora - Advanced AI Assistant with RAG and MCP capabilities"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Bruno Soares", email = "bruno.soarxz@gmail.com"}]
requires-python = ">=3.13"

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain-voyageai>=0.1.0",
    "langchain-ollama>=0.2.0",
    "aiosqlite>=0.20.0",
    "lancedb>=0.14.0",
    "pyarrow>=17.0.0",
    "sqlalchemy>=2.0.0",
    "mcp>=0.1.0",
    "tavily-python>=0.7.24",
    "langchain-mcp-adapters>=0.1.0",
    "trio>=0.27.0",
    "rich>=13.0.0",
    "textual>=0.70.0",
    "rank-bm25>=0.2.2",
    "python-dotenv>=1.0.0",
    "langsmith>=0.8.4",
    "deepagents>=0.6.1",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.23.0", "pytest-cov>=4.0.0"]
dev = ["ruff>=0.5.0", "mypy>=1.10.0", "bandit>=1.7.5", "types-python-dateutil"]

[project.scripts]
vectora = "vectora.run_chat:run_chat"
vectora-mcp = "vectora.mcp_server:mcp_run"

[tool.hatch.build.targets.wheel]
packages = ["vectora"]

[tool.hatch.build.targets.wheel.force-include]
"vectora/defaults.env" = "defaults.env"

[tool.ruff]
line-length = 88
target-version = "py313"
fix = true
show-fixes = true
indent-width = 4
exclude = [".venv", "data", "logs"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "T201", "COM812", "INP001", "D", "ANN401", "ERA001", "PLW0603",
    "RUF012", "G202", "TRY300", "TRY301", "SIM117", "SIM102", "ARG001",
    "ARG002", "BLE001", "RUF001", "PGH003", "SLF001", "S110", "PLR2004",
    "E501", "PD011", "DTZ005", "TRY004", "PLC0415", "F841", "ASYNC240",
    "F401", "PT011", "PT017", "FBT001", "G004", "TRY401", "TRY002",
    "ARG005", "C901", "A004", "ASYNC230", "PLR0913", "E402"
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "ANN001", "ARG001", "ARG002", "S101"]
"vectora/prompts.py" = ["E501"]
"vectora/tools.py" = ["PLR0911", "S602"]
"vectora/nodes.py" = ["E501"]
"vectora/setup_wizard.py" = ["S603", "RUF006", "F841"]
"vectora/checkpointer.py" = ["N802"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.13"
include = ["vectora", "tests"]
exclude = ["**/venv", "**/.venv", "**/env", "**/.env", "**/node_modules", "**/__pycache__"]
venv = ".venv"
venvPath = "."
executionEnvironments = [{ root = "vectora" }]

[tool.pytest.ini_options]
addopts = "-s --color=yes --tb=short"
pythonpath = ["vectora"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
